--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <main>
 <div class ="popular">
     <h1> Popular Items </h1>
-    <!-- clickable images code refrerenced from : https://www.w3schools.com/html/html_images.asp -->
+    <!-- clickable images code refed from : https://www.w3schools.com/html/html_images.asp -->
     <div class ="blueberry">
         <img src="assets/bun.svg" alt="blueberry" width=100 height=100> </img>
         <h3>Blueberry Flavored Bun</h3>
@@ -38,7 +38,7 @@
         <img src="assets/bun.svg" alt="original" width=100 height=100></img>
         <h3>Original Flavored Bun</h3>
     </div>
-    <div class = "pumplin">
+    <div class = "pumpkin">
         <img src="assets/bun.svg" alt="pumpkin spice" width=100 height=100></img>
         <h3>Pumpkin Spice Flavored Bun</h3>
     </div>
